--- a/template.yaml
+++ b/template.yaml
@@ -182,7 +182,7 @@ Mappings:
     'eu-central-1':
       AMI: 'ami-0cc293023f983ed53'
     'us-east-1':
-      AMI: 'ami-0b898040803850657'
+      AMI: 'ami-062f7200baf2fa504'
     'us-east-2':
       AMI: 'ami-0d8f6eb4f641ef691'
     'us-west-1':
@@ -962,6 +962,12 @@ Resources:
               test: '[ ! -f /etc/clamd.conf ]'
             f_update_clamav_db:
               command: freshclam
+            g_systemctl_enable_clamd:
+              command: 'systemctl enable clamd@scan'
+              test: '! systemctl is-enabled clamd@scan'
+            h_systemctl_start_clamd:
+              command: 'systemctl start clamd@scan'
+              test: '! systemctl is-active clamd@scan'
           services:
             sysvinit:
               's3-virusscan':
@@ -972,14 +978,6 @@ Resources:
                 - '/opt/aws-s3-virusscan/worker.rb'
                 - '/opt/aws-s3-virusscan/s3-virusscan.conf'
                 - '/etc/init.d/s3-virusscan'
-              'clamd@scan':
-                enabled: true
-                ensureRunning: true
-                packages:
-                  yum:
-                  - clamd
-                files:
-                - '/etc/clamd.conf'
               amazon-ssm-agent:
                 enabled: !If [HasSystemsManagerAccess, true, false]
                 ensureRunning: !If [HasSystemsManagerAccess, true, false]
